:bug: fix: header top text-align correction

--- a/events/boracodar.dev/07-bloco-de-carnaval/assets/css/style.scss
+++ b/events/boracodar.dev/07-bloco-de-carnaval/assets/css/style.scss
@@ -35,7 +35,7 @@ input, select, button {
 header {
   min-height: 53.2rem;
   background-color: #F8F8FF;
-  text-align: center;
+
   position: relative;
   display: grid;
   place-content: center;
@@ -69,6 +69,10 @@ header {
 
   .content {
     width: fit-content;
+
+    .top {
+      text-align: center;
+    }
   }
 
   p {
@@ -88,6 +92,8 @@ header {
     color: #121214;
     
     max-width: 64.7rem;
+
+    margin: auto;
 
     span {
       color: #6246EA;
